Bug 443424 - Picture of the Day from NOAA not working
Summary: Picture of the Day from NOAA not working
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Picture of the Day (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Guo Yunhe
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-07 07:40 UTC by Johannes Joens
Modified: 2022-01-31 17:38 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Joens 2021-10-07 07:40:40 UTC
SUMMARY
The Picture of the day for NOAA does not get loaded and the background stays black with it.

STEPS TO REPRODUCE
1. Select Wallpaper Type: Picture of the Day
2. Select Provider: Weather Satellite (NAOO)
3. Click Apply

OBSERVED RESULT
The background image turn black

EXPECTED RESULT
The Picture of the day from NAOO gets set as the background image

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.13.19-2MANJARO (64-bit)
(available in About System)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Looks like its trying to fetch a .jpg image but the most recent ones are mostly .gif and .webp images
Comment 1 Harald Sitter 2021-10-07 09:16:16 UTC
Looking at the code and the real website the website side changed rather significantly as of late breaking the entire content extraction and I'm not really sure what was extracted before so I also have no idea how to fix it.
Comment 2 Nate Graham 2021-10-07 16:23:06 UTC
Yes, we are constantly playing cat-and-mouse with the NOAA POTD provider due to website changes. :(
Comment 3 Bug Janitor Service 2022-01-29 08:07:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/110
Comment 4 Nate Graham 2022-01-31 17:38:12 UTC
Git commit 46461d1936f5b471135828c8728f9d99c9f57e85 by Nate Graham, on behalf of Fushan Wen.
Committed on 31/01/2022 at 17:31.
Pushed by ngraham into branch 'master'.

dataengines/potd: Fix image URL parsing in NOAAProvider

NOAA now lists their pictures in a new URL. We need to visit the list
first and then match the latest link, and fetch the wallpaper from the
latest link.
FIXED-IN: 5.24

M  +38   -5    dataengines/potd/noaaprovider.cpp
M  +1    -0    dataengines/potd/noaaprovider.h

https://invent.kde.org/plasma/kdeplasma-addons/commit/46461d1936f5b471135828c8728f9d99c9f57e85
Comment 5 Nate Graham 2022-01-31 17:38:39 UTC
Git commit 47405cb05522856f5dd6a68bb70a4c0e866a1040 by Nate Graham, on behalf of Fushan Wen.
Committed on 31/01/2022 at 17:38.
Pushed by ngraham into branch 'Plasma/5.24'.

dataengines/potd: Fix image URL parsing in NOAAProvider

NOAA now lists their pictures in a new URL. We need to visit the list
first and then match the latest link, and fetch the wallpaper from the
latest link.
FIXED-IN: 5.24


(cherry picked from commit 46461d1936f5b471135828c8728f9d99c9f57e85)

M  +38   -5    dataengines/potd/noaaprovider.cpp
M  +1    -0    dataengines/potd/noaaprovider.h

https://invent.kde.org/plasma/kdeplasma-addons/commit/47405cb05522856f5dd6a68bb70a4c0e866a1040