dataengines/potd: Fix image URL parsing in NOAAProvider

NOAA now lists their pictures in a new URL. We need to visit the list
first and then match the latest link, and fetch the wallpaper from the
latest link.

BUG: 443424
FIXED-IN: 5.24